examples/test/testpolicy977.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy977
  namespace: namespace35
spec:
  podSelector:
    matchLabels:
      key32: value42
      key13: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value38
          key7: value22
          key34: value3
      podSelector:
        matchLabels:
          key16: value14
